tests/fixtures/valid/escape_newline.mmd
flowchart TD
    Start --> A[println 'hello\\nworld']
    A --> End
