tests/fixtures/invalid/invalid_hex_escape.mmd
flowchart TD
    Start --> A[println '\\xGG']
    A --> End
